<resources>
    <string name="app_name">ReichNicholas_GardensOfEgregore</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="light_manager">Light Manager</string>
    <string name="flower_text">18 Hours On And 6 Hours Off (18:6)</string>
    <string name="veg_text">Lights Stay On 24 Hours A Day, Every Day (24:0)</string>
    <string name="vegetative_state">Vegetative State</string>
    <string name="flowering_state">Flowering State</string>
    <string name="master_controller">Master Controller</string>
    <string name="toggle_water_pump_on_or_off">Toggle water pump On or Off</string>
    <string name="water_pump">Water Pump</string>
    <string name="toggle_lights_on_and_off">Toggle lights On and Off</string>
    <string name="lights">Lights</string>
    <string name="toggle_fan_on_and_off">Toggle Fan On and Off</string>
    <string name="fan">Fan</string>
</resources>
