<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/master_controller"
            style="@style/HeaderTextStyle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/BodyTextStyle"
                    android:text="@string/lights"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/DetailTextStyle"
                    android:text="@string/toggle_lights_on_and_off"
                    />


            </LinearLayout>
            <Switch
                android:id="@+id/lights_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="32dp"
                android:paddingTop="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/BodyTextStyle"
                    android:text="@string/water_pump"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/DetailTextStyle"
                    android:text="@string/toggle_water_pump_on_or_off"
                    />


            </LinearLayout>
            <Switch
                android:id="@+id/water_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="32dp"
                android:paddingTop="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/BodyTextStyle"
                    android:text="@string/fan"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/DetailTextStyle"
                    android:text="@string/toggle_fan_on_and_off"
                    />


            </LinearLayout>
            <Switch
                android:id="@+id/fan_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="32dp"
                android:paddingTop="12dp"/>
        </LinearLayout>





    </LinearLayout>

</android.support.constraint.ConstraintLayout>