<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_manager"
            style="@style/HeaderTextStyle" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/BodyTextStyle"
                    android:text="@string/vegetative_state"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/DetailTextStyle"
                    android:text="@string/veg_text"
                   />


            </LinearLayout>
            <Switch
                android:id="@+id/veg_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="32dp"
                android:paddingTop="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/BodyTextStyle"
                    android:text="@string/flowering_state"
                    android:paddingStart="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/DetailTextStyle"
                    android:text="@string/flower_text"
                   />
            </LinearLayout>
            <Switch
                android:id="@+id/flower_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="32dp"
                android:paddingTop="12dp"/>
        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>